--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="style.css" />
-      <script src="script.js" defer></script>
+      <link rel="stylesheet" href="styles.css" />
+      <script src="app_index.js" defer></script>
       <title>Calendario de notas</title>
    </head>
     <body>
-        <h1>Calendario de notas</h1>
+        <h1 id="init">Calendario de notas</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
     </body>
 </html> 
