--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
    </head>
     <body>
         <h1 id="init">Calendario de notas</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+        <p>Año 2026</p>
     </body>
 </html> 
